<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/employeeViewLayout"
    tools:context=".EmployeeViewActivity">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        tools:context=".EmployeeViewActivity"
        android:background="@drawable/background1">
    </FrameLayout>

    <Button
        android:background="@drawable/prebtnbckgrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/empViewInButton"
        android:layout_above="@+id/empViewOutButton"
        android:layout_marginBottom="85dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/checkIn"
        android:onClick="changeLayout"/>

    <Button
        android:background="@drawable/prebtnbckgrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:textColor="@color/white"
        android:id="@+id/empViewOutButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="30sp"
        android:text="@string/checkOut"
        android:onClick="changeLayout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/empViewEditLabel"
        android:text="@string/employeeName"
        android:layout_below="@id/empViewOutButton"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:labelFor="@id/empViewEditText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:id="@+id/empViewEditText"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/empViewOutButton"
        android:layout_marginTop="135dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:inputType="text"/>

</RelativeLayout>